--- a/src/TopbarFolder/TopbarStyle.css
+++ b/src/TopbarFolder/TopbarStyle.css
@@ -44,7 +44,7 @@
   }
 }
 .first .topbar h3 {
-  color: royalblue;
+  color: rgb(150, 171, 217);
   font-family: "Orbitron", sans-serif;
 }
 .first .topbar nav {
@@ -92,7 +92,7 @@
   }
 }
 .first .topbar nav ul li {
-  color: whitesmoke;
+  color: rgb(150, 171, 217);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,21 +105,14 @@
   font-weight: 600;
 }
 .first .topbar nav ul li:hover {
-  background-color: rgba(160, 183, 252, 0.888);
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+  background-color: rgba(13, 21, 34, 0.694);
   transform: scale(1.5);
 }
 @media only screen and (min-width: 850px) {
   .first .topbar nav ul li {
     border: none;
     font-weight: 700;
-    transition: all 0.2s linear;
-  }
-  .first .topbar nav ul li::after {
-    content: "";
-    width: 0px;
-    height: 40px;
-    position: absolute;
     transition: all 0.2s linear;
   }
   .first .topbar nav ul li:hover {
@@ -129,12 +122,6 @@
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
     transform: scale(1.5);
   }
-  .first .topbar nav ul li:hover::before {
-    content: "";
-    width: 100%;
-    height: 30px;
-    position: absolute;
-  }
 }
 .first .topbar .social-media {
   display: flex;
@@ -143,7 +130,7 @@
   flex-direction: column;
   position: absolute;
   right: 0;
-  top: 6rem;
+  top: 8rem;
   height: 140px;
   width: 80px;
   position: fixed;
@@ -153,7 +140,7 @@
     border: none;
     position: relative;
     right: 20px;
-    top: 15vh;
+    top: 20vh;
   }
 }
 .first .topbar .social-media li {
@@ -162,17 +149,18 @@
   align-items: center;
   flex-direction: column;
   background-color: rgba(13, 21, 34, 0.694);
-  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-  border-radius: 5px;
+  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.193);
+  border-radius: 8px;
   margin-bottom: auto;
   width: 80%;
   gap: 20px;
   padding: 5px 5px 45px 5px;
+  border: 1px solid rgba(65, 105, 225, 0.255);
 }
 .first .topbar .social-media li .social-icon {
-  color: #4c5eff;
   font-size: 20px;
   transition: all 0.2s linear;
+  color: rgb(150, 171, 217);
 }
 .first .topbar .social-media li .social-icon:hover {
   transform: scale(1.5);
@@ -184,8 +172,11 @@
   flex-direction: column;
   transform: rotate(90deg);
   width: 100px;
-  background-color: #4c5eff;
+  color: rgb(150, 171, 217);
   padding: 5px 4px;
+  background-color: rgba(29, 49, 80, 0.694);
+  border: 1px solid rgba(65, 105, 225, 0.255);
+  border-radius: 5px;
 }
 .first .topbar .social-media .social-media-follow-me p {
   font-size: 12px;
