--- a/src/TopbarFolder/TopbarStyle.scss
+++ b/src/TopbarFolder/TopbarStyle.scss
@@ -80,16 +80,14 @@ $special-Color: #4c5eff;
     position: fixed;
     width: 100vw;
     background-color: rgb(0, 0, 0);
-    // box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
     background-color: rgba(13, 21, 34, 0.694);
-    // border: 2px solid green;
 
     @include responsive(tablet) {
       padding: 10px 10px;
     }
     //  icon
     h3 {
-      color: royalblue;
+      color: rgb(150, 171, 217);
       font-family: "Orbitron", sans-serif;
       // position: fixed;
     }
@@ -137,7 +135,7 @@ $special-Color: #4c5eff;
         }
 
         li {
-          color: whitesmoke;
+          color: rgb(150, 171, 217);
           @include flexDisplay(center, center, row);
           padding: 10px;
           border-bottom: 1px solid royalblue;
@@ -146,8 +144,8 @@ $special-Color: #4c5eff;
           transition: all 0.2s linear;
           font-weight: 600;
           &:hover {
-            background-color: rgba(160, 183, 252, 0.888);
-            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+            box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
+            background-color: rgba(13, 21, 34, 0.694);
             transform: scale(1.5);
           }
           @include responsive(tablet) {
@@ -156,15 +154,6 @@ $special-Color: #4c5eff;
             // width: 0;
             transition: all 0.2s linear;
 
-            &::after {
-              content: "";
-              width: 0px;
-              height: 40px;
-              position: absolute;
-              transition: all 0.2s linear;
-
-              // border: 2px solid white;
-            }
             &:hover {
               z-index: 5;
               width: 70%;
@@ -173,16 +162,6 @@ $special-Color: #4c5eff;
               transform: scale(1.5);
 
               // background-color: #444444;
-
-              &::before {
-                content: "";
-                width: 100%;
-                height: 30px;
-                position: absolute;
-                // border: 1px solid royalblue;
-                // border-radius: 5px;
-                // transition: all 0.3s linear;
-              }
             }
           }
         }
@@ -193,7 +172,7 @@ $special-Color: #4c5eff;
       @include flexDisplay(center, center, column);
       position: absolute;
       right: 0;
-      top: 6rem;
+      top: 8rem;
       height: 140px;
       width: 80px;
       position: fixed;
@@ -203,7 +182,7 @@ $special-Color: #4c5eff;
         border: none;
         position: relative;
         right: 20px;
-        top: 15vh;
+        top: 20vh;
       }
 
       li {
@@ -212,17 +191,18 @@ $special-Color: #4c5eff;
         // background-color: rgba(255, 255, 255, 0.1);
         background-color: rgba(13, 21, 34, 0.694);
         // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-        box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
-        border-radius: 5px;
+        box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.193);
+        border-radius: 8px;
         margin-bottom: auto;
         width: 80%;
         gap: 20px;
         padding: 5px 5px 45px 5px;
+        border: 1px solid rgba(65, 105, 225, 0.255);
 
         .social-icon {
-          color: #4c5eff;
           font-size: 20px;
           transition: all 0.2s linear;
+          color: rgb(150, 171, 217);
 
           &:hover {
             transform: scale(1.5);
@@ -231,11 +211,13 @@ $special-Color: #4c5eff;
       }
       .social-media-follow-me {
         @include flexDisplay(center, center, column);
-
         transform: rotate(90deg);
         width: 100px;
-        background-color: #4c5eff;
+        color: rgb(150, 171, 217);
         padding: 5px 4px;
+        background-color: rgba(29, 49, 80, 0.694);
+        border: 1px solid rgba(65, 105, 225, 0.255);
+        border-radius: 5px;
 
         p {
           font-size: 12px;
