--- a/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
+++ b/src/BannerFolder/HomeFolder/ServicesFolder/ServiceStyle.scss
@@ -61,28 +61,21 @@ $special-Color: #4c5eff;
   }
 }
 
-.aboutMe {
-  border: 1px solid royalblue;
+.services-con {
   margin: 0 auto;
-  // background-color: rgba(97, 155, 255, 0.062);
-  // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-  background-color: rgba(13, 21, 34, 0.694);
-  // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-  box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   margin-top: 100px;
-  border-radius: 10px;
-  padding: 20px 5px;
   width: 100%;
-  max-width: 2000px;
+  max-width: 2400px;
+  background-color: rgba(13, 21, 34, 0);
 
-  .aboutMe-container {
+  .services {
     font-size: 10px;
 
     @include responsive(bigphone) {
       font-size: 20px;
     }
   }
-  .mappedHeading {
+  .what-i-do {
     width: 90%;
     padding: 15px;
     margin-top: 30px;
@@ -93,87 +86,34 @@ $special-Color: #4c5eff;
       margin-top: 30px;
       width: 80%;
     }
-
-    h3 {
-      font-size: 15px;
-      text-decoration: underline;
-
-      @include responsive(bigphone) {
-        font-size: 20px;
-      }
-    }
-    p {
-      color: rgb(109, 135, 192);
-      font-size: 10px;
-      width: 100px;
-      letter-spacing: 1px;
-      line-height: 17px;
-      word-spacing: 5px;
-    }
   }
 
-  .mappedDetails {
-    margin: 0 auto;
-    position: relative;
-    overflow-y: scroll;
-    max-height: 300px;
-    padding: 5px 15px;
-
-    @include responsive(bigphone) {
-      width: 80%;
-    }
-
-    span {
-      color: rgb(109, 135, 192);
-      font-size: 10px;
-      letter-spacing: 1px;
-      line-height: 17px;
-      word-spacing: 3px;
-
-      @include responsive(bigphone) {
-        color: rgb(150, 171, 217);
-        font-size: 15px;
-        letter-spacing: 2px;
-        line-height: 20px;
-        word-spacing: 5px;
-      }
-
-      .readMore {
-        color: rgb(206, 234, 254);
-        border: none;
-        width: 80px;
-        height: 20px;
-        background-color: rgba(146, 17, 17, 0);
-        padding: 0 5px;
-        font-size: 8px;
-        cursor: pointer;
-
-        @include responsive(bigphone) {
-          font-size: 15px;
-          width: 110px;
-          padding: 5px;
-        }
-      }
-    }
-  }
-
-  .myStaticsCon {
+  .myServicesCon {
     @include flexDisplay(space-around, top, row);
-    background-color: rgba(13, 21, 34, 0.694);
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
-    margin-top: 50px;
-
-    .statCard {
+    flex-wrap: wrap;
+    gap: 20px;
+    background-color: rgba(13, 21, 34, 0);
+    .serviceCard {
       @include flexDisplay(center, top, column);
       border: 1px solid royalblue;
+      background-color: rgba(13, 21, 34, 0.694);
+      // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
       box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
       border-radius: 5px;
-      width: 30%;
+      width: 40%;
       margin-bottom: auto;
       text-align: center;
       padding: 5px 0;
+      transition: all 0.3s linear;
+
+      &:hover {
+        transform: scale(1.2);
+        border: 2px solid royalblue;
+      }
 
       @include responsive(bigphone) {
+        width: 35%;
+        max-width: 400px;
         height: 170px;
         border-radius: 10px;
         padding: 0 0 15px 0;
@@ -195,17 +135,13 @@ $special-Color: #4c5eff;
       }
     }
   }
-  .punchLine {
+  .img2 {
+    margin-top: 20px;
     width: 100%;
-    text-align: center;
-    font-size: 8px;
-    margin-top: 10px;
-    color: rgb(150, 171, 217);
-
-    @include responsive(bigphone) {
-      font-size: 15px;
-      word-spacing: 10px;
-    }
+    opacity: 0.8;
+    // background-color: rgba(13, 21, 34, 0.694);
+  // box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.4);
+  // box-shadow: 5px 5px 30px rgba(40, 82, 189, 0.263);
   }
 
   .pun {
